sorting filtering and Paging

--- a/my-books/Properties/launchSettings.json
+++ b/my-books/Properties/launchSettings.json
@@ -32,7 +32,9 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "swagger",
+      // "launchUrl": "swagger",
+      "launchUrl": "api/publishers/get-all-publishers",
+
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
